--- a/package.json
+++ b/package.json
@@ -4,18 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/index.ts",
-    "dev": "ts-node --transpile-only src/index.ts",
-    "watch": "nodemon --watch src --exec \"ts-node src/index.ts\"",
-    "test": "ts-node src/test.ts"
+    "start": "ts-node-dev src/index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "watch": "ts-node-dev --respawn src/test.ts",
+    "type-check": "tsc --noEmit"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^9.1.0",
-    "nodemon": "^3.1.7",
-    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
   }
 }
